--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,7 @@
+
 html{
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
+    scrollbar-arrow-color: #0077ff;
 }
 nav{
         background: linear-gradient(to right, #0f0c29 , #127af0 40%,#0f67af 60%, #0c0c0c ); 
@@ -127,8 +129,6 @@ h2{
  }
 
 
-
-
 #text-article{
     box-shadow:3px 5px 10px #10ec52;
     padding: 10px;
@@ -142,6 +142,7 @@ h2{
     margin-left: 11px;
     margin-right: 10px;
     text-align: justify;
+  
 }
 #text-article:hover{
     transition-duration: 1080ms;
@@ -162,6 +163,7 @@ h2{
     border-radius:20px;
     box-shadow: 0 0 20px #1094ec;
     margin-left: 10px;
+    width:auto;
     margin-right: 10px;
     background-color: #0e7fc5a6;
     font-size: 21px;
@@ -183,7 +185,7 @@ h2{
 .outer{
     width: 525px;
     height: auto;
-    margin-left: 500px;
+    margin-left: 24%;
     border-radius: 8px;
     position: relative;
     background: linear-gradient(to right, #102eff, #d2379b 100%);
@@ -249,6 +251,7 @@ fieldset, label { margin: 0; padding: 0; }
     display: flex;
     align-items: center;
     justify-content: center;
+    background: #f3f3f3;
     padding: 0 10px;
   }
   
@@ -258,5 +261,5 @@ fieldset, label { margin: 0; padding: 0; }
     }
 
   .card-emoji-cursor {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='48' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👨‍💻</text></svg>"), auto;
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='48' height='48' style='fill:black;font-size:24px;'><text y='50%'>👨‍💻</text></svg>"), auto;
   }
